# openassistant

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md
docs/superpowers/plans/: 2026-06-10-agent-loop-hardening.md  2026-06-10-screenshot-ready-chat.md
docs/superpowers/specs/: 2026-06-10-agent-loop-hardening-design.md  2026-06-10-screenshot-ready-chat-design.md  2026-06-12-proactive-brief-watchers-design.md  2026-06-13-channel-session-persistence-design.md  2026-06-13-conversation-history-design.md  2026-06-13-cron-execution-design.md  2026-06-13-hook-fire-points-design.md  2026-06-13-memory-panel-design.md  2026-06-13-standing-orders-design.md  2026-06-14-mcp-tool-invocation-design.md
frontend/: app.js  index.html  markdown.js  styles.css  theme.js
openspec/: project.md
openspec/changes/add-desktop-app/: design.md  proposal.md  research-notes.md  tasks.md
openspec/changes/add-desktop-app/specs/desktop-app/: spec.md
openspec/changes/add-desktop-onboarding-options/: design.md  proposal.md  research-notes.md  tasks.md
openspec/changes/add-desktop-onboarding-options/specs/desktop-app/: spec.md
openspec/changes/claude-cli-bridge/: proposal.md  tasks.md
openspec/changes/complete-core-features-and-integrations/: design.md  proposal.md  research-notes.md  tasks.md
openspec/changes/complete-core-features-and-integrations/specs/checkpoints/: spec.md
openspec/changes/complete-core-features-and-integrations/specs/discord-gateway/: spec.md
openspec/changes/complete-core-features-and-integrations/specs/goals/: spec.md
openspec/changes/complete-core-features-and-integrations/specs/multi-model-routing/: spec.md
openspec/changes/complete-core-features-and-integrations/specs/self-update/: spec.md
openspec/changes/complete-core-features-and-integrations/specs/workflow-execution/: spec.md
openspec/changes/complete-gateway-channels/: proposal.md  tasks.md
openspec/changes/complete-gateway-channels/specs/gateway/: spec.md
openspec/changes/desktop-gateway-control/: proposal.md  tasks.md
openspec/changes/discord-persistence-slash-review/: proposal.md  tasks.md
openspec/changes/discord-threads-and-commands/: proposal.md  tasks.md
openspec/changes/gateway-config-and-readiness/: proposal.md  tasks.md
openspec/changes/gateway-config-and-readiness/specs/gateway-readiness/: spec.md
skills/: coding.md  research.md  writing.md
src/: lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: autostart.rs  chat.rs  gateway.rs  memory.rs  mod.rs  onboarding.rs  persona.rs  schedules.rs  settings.rs  skills.rs  system.rs  updater.rs
src/canvas/: mod.rs  renderer.rs
src/config/: mod.rs
src/core/: agent.rs  agent_teams.rs  brief.rs  browser.rs  channels.rs  checkpoint.rs  claude_bridge.rs  context.rs  conversation_store.rs  goal_store.rs  goal_system.rs  hooks.rs  mcp.rs  memory.rs  mod.rs  multi_agent.rs  permissions.rs  persona.rs  plugins.rs  proc.rs  self_update.rs  session.rs  standing_orders.rs  streaming.rs  subagent.rs  watchers.rs  web_search.rs  workflows.rs  worktree.rs
src/cron/: mod.rs  scheduler.rs
src/gateway/: attachments.rs  discord.rs  discord_store.rs  mod.rs  proactive.rs  session_store.rs  slack.rs  telegram.rs  webchat.rs  webchat_page.html
src/memory/: mod.rs  search.rs  store.rs
src/onboarding/: mod.rs  wizard.rs
src/security/: allowlist.rs  mod.rs  pairing.rs
src/skills/: engine.rs  mod.rs
src/tools/: bash.rs  browser.rs  file.rs  file_search.rs  mod.rs  shell.rs  vision.rs
src/ui/: chat.rs  mod.rs  tui.rs  web.rs
tests/e2e/: chat.spec.cjs  conversations.spec.cjs  memory-facts.spec.cjs  mock-helpers.cjs  package-lock.json  package.json  panels.spec.cjs  playwright.config.cjs  static-server.cjs  wizard.spec.cjs
