[package]
name = "open-assistant"
version = "0.1.0"
edition = "2021"
description = "openAssistant — A unified personal AI assistant combining OpenHumans, Hermes Agent, and OpenClaw"
license = "MIT"
repository = "https://github.com/openassistant/open-assistant"

[dependencies]
# Core
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# CLI / TUI
clap = { version = "4", features = ["derive"] }

# Storage
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }

# HTTP / API
reqwest = { version = "0.12", features = ["json", "stream"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }

# Async
futures = "0.3"
async-trait = "0.1"

# Config
directories = "6"
config = "0.15"

# Utils
walkdir = "2"
notify = "8"
regex = "1"
glob = "0.3"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
toml = "0.8"
rand = "0.8"
urlencoding = "2"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
