[package]
name = "open-assistant"
version = "0.3.0"
edition = "2021"
description = "openAssistant — A unified personal AI assistant combining OpenHumans, Hermes Agent, and OpenClaw"
license = "MIT"
repository = "https://github.com/openassistant/open-assistant"

# Two-member workspace: the root crate (CLI + open_assistant lib) and the
# Tauri desktop app under src-tauri/. The desktop crate path-depends on the
# root, reusing the agent core in-process. resolver "2" is recommended by Tauri.
[workspace]
members = ["src-tauri"]
resolver = "2"

# Library target: exposes the agent core for in-process reuse by the CLI
# binary and the Tauri desktop app (src-tauri/).
[lib]
name = "open_assistant"
path = "src/lib.rs"

# Explicit binary target so the lib/bin split is unambiguous.
[[bin]]
name = "openassistant"
path = "src/main.rs"

[dependencies]
# Core
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# CLI / TUI
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"

# Storage
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }

# HTTP / API
reqwest = { version = "0.12", features = ["json", "stream"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }

# Async
futures = "0.3"
tokio-stream = "0.1"
async-trait = "0.1"

# Config
directories = "6"
config = "0.15"

# Utils
walkdir = "2"
notify = "8"
regex = "1"
glob = "0.3"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
base64 = "0.22"
toml = "0.8"
rand = "0.8"
urlencoding = "2"
syntect = "5"
unicode-width = "0.2"
# Atomic JSON persistence for the goal store (NamedTempFile::persist).
tempfile = "3"

# Discord gateway. default-features off + rustls so we don't pull a second TLS
# stack alongside reqwest's; minimal feature set for receiving + replying.
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "model", "http", "builder", "rustls_backend"] }

# Pure-Rust PDF text extraction for Discord attachment ingest. No system libs,
# builds on Windows. API: pdf_extract::extract_text_from_mem(&[u8]) -> Result<String>.
pdf-extract = "0.10"

[dev-dependencies]
tokio-test = "0.4"
