[package]
name = "openassistant-desktop"
version = "0.1.0"
description = "openAssistant desktop application (Tauri 2.x shell over the open_assistant core)"
authors = ["openAssistant"]
license = "MIT"
repository = "https://github.com/openassistant/open-assistant"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "openassistant_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Reuse the agent core in-process (the [lib] target added to the root crate).
open-assistant = { path = ".." }

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
# Native folder picker (onboarding) and safe external-link opening (provider docs).
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
# Direct dependency: probe_connection calls the LLM endpoint from Rust, NOT the
# webview, so it does not go through tauri-plugin-http's frontend gate.
reqwest = { version = "0.12", features = ["json"] }
# Async fs (path-writability, skill files) and timeouts (vision probe).
tokio = { version = "1", features = ["fs", "time"] }
